--- a/client/src/component/menu/Navbarmenu.css
+++ b/client/src/component/menu/Navbarmenu.css
@@ -5,7 +5,7 @@ body {
   padding: 0px;
   overflow-x: hidden;
   background-repeat: repeat;
-  font-family: 'Inter', sans-serif;
+
   display: grid;
 }
 .container {
@@ -98,7 +98,7 @@ li {
   width: 100%;
   float: left;
   position: relative;
-  /* background-image: linear-gradient(80deg, #003AAD 0%, #070F1F 100%); */
+  background-image: linear-gradient(80deg, #003AAD 0%, #070F1F 100%);
 }
 .header__middle__logo > a > h1 {
   color: #07a8ff;
@@ -176,20 +176,26 @@ li {
 
 .header__middle__logo img{
   max-width: 207px;
-  margin: 17px 0 0 0;
+  margin: 10px 0 0 0;
 }
 
 
 @media(max-width:991px){
-.header__middle__logo {width: 77%;}
-.header__middle__menus {width: 20%;}
+.header__middle__logo {
+  width: 77%;}
+.header__middle__menus {
+  width: 20%;
+}
 .header__middle__logo img {
-  max-width: 197px;margin: 27px 0 0 0;
+  max-width: 197px;
+  margin:0px 0 0 0;
 }
 .main-nav .menubar__button:hover {
   background-color: #0f71f2;
 }
-.main-nav .menu-item:hover > a {color: #07a8ff !important}
+.main-nav .menu-item:hover > a {
+  color: #07a8ff !important;
+}
 .main-nav .menubar__button {
   display: block!important;
   float: right;
@@ -197,13 +203,16 @@ li {
   color: #fff;
   padding: 6px 7px;
   border-radius: 5px;
-  margin: 27px auto 0;
+  margin: 8px auto 0;
   cursor: pointer;
   position: relative;
   z-index: 10037;
 }
-.main-nav .menubar__button svg{font-size: 27px;}
+.main-nav .menubar__button svg{
+  font-size: 27px;
+}
 .main-nav ul.menuq2 {
+
   display: block!important;
   position: absolute;
   left: 0;
@@ -214,14 +223,33 @@ li {
   padding-bottom: 17px;
   padding-top: 57px;
 }
-.main-nav .menu-item a {margin: 10px 17px;text-align: center;color: #000000;}
-.main-nav  ul.main-menu {display: none}
-.main-nav .sub__menus__arrows:hover .sub__menus {margin: 0 auto;left: 0;right: 0;}
-.sub__menus__Active{display: block!important;margin: 0 auto;left: 0;right: 0;}
-.sub__menus__Active2{display: block!important;}
-.menus__categorysss{display: none;}
-.menus__categorysss2{display: none;}
-.menu-item .sub__menus__full a {text-align: left;}
+.main-nav .menu-item a {
+  margin: 10px 17px;text-align: center;color: #000000;
+}
+.main-nav  ul.main-menu {
+  display: none;
+}
+.main-nav .sub__menus__arrows:hover .sub__menus {
+  margin: 0 auto;left: 0;right: 0;
+}
+.sub__menus__Active{
+  display: block!important;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+}
+.sub__menus__Active2{
+  display: block!important;
+}
+.menus__categorysss{
+  display: none;
+}
+.menus__categorysss2{
+  display: none;
+}
+.menu-item .sub__menus__full a {
+  text-align: left;
+}
 
 }
 
