--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 *{
     font-family: 'Montserrat', sans-serif;
@@ -11,4 +10,25 @@ a {
     color: #24ffc4;
     text-decoration: none;
 }
+p{
+ font-size: 14px;
+ line-height: 24px;
+ overflow: hidden;
+ text-overflow: ellipsis;
+ display: -webkit-box;
+ -webkit-line-clamp: 3;
+ -webkit-box-orient: vertical;
+ margin-bottom:0px;
+}
+.body-main {
+    padding-top: 95px;
+}
 
+h3 {
+    font-size: 24px;
+    line-height: 24px;
+    color: #000000;
+    font-weight: 600;
+    font-family: "Montserrat";
+    margin-bottom: 0px;
+}
