--- a/client/src/component/Home.css
+++ b/client/src/component/Home.css
@@ -1,33 +1,42 @@
 section#home-banner {
     background-color: transparent;
     background-image: linear-gradient(50deg, #003AAD 0%, #070F1F 100%);
-    padding: 200px 0px 150px 0px;
+    padding: 250px 0px 273px 0px;
 }
 .home-alin {
     align-items: center;
 }
-
+section#home-banner .container {
+    max-width: 1140px;
+    margin: auto;
+}
+.slideb1 {
+    padding-top: 95px;
+}
 .Home-slide h2 {
     text-align: left;
-    font-family: "Montserrat", Sans-serif;
     font-size: 65px;
     font-weight: 700;
     color: #fff;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 60px;
 }
 .Home-slide p {
     color: #D8D5D5;
-    font-family: "Open Sans", Sans-serif;
+    font-family: Arial , sans-serif;
     font-size: 19px;
     font-weight: 400;
+    padding: 12px 0px;
 }
-
+.home-alin i {
+    font-size: 14px;
+}
 .Home-slide span {
-    color: #28F2B9;
+    color: #4af8d5;
 }
 .Banner-img {
     width: 100%;
     height: 100%;
-    text-align:center;
 }
 .Banner-img img {
     width: 100%;
@@ -35,7 +44,7 @@ section#home-banner {
 }
 
 button.know-btn {
-    border: 2px solid #27F2B9;
+    border: 2px solid #4af8d5;
     font-size: 14px;
     line-height: 14px;
     padding: 14px 25px;
@@ -43,7 +52,7 @@ button.know-btn {
     background-color: transparent;
 }
 .know-btn a {
-    color: #27F2B9;
+    color: #4af8d5;
     text-decoration: none;
     font-weight: 600;
 }
@@ -72,29 +81,35 @@ button.know-btn {
 .Live-alin {
     align-items: center;
 }
+/* .Live-main {
+    max-width: 1100px;
+    margin: auto;
+} */
 .Live-main h3 {
     color: #FFFFFF;
-    font-family: "Montserrat", Sans-serif;
+font-family: Arial , sans-serif;
     font-size: 26px;
     font-weight: 700;
     line-height: 1.1em;
+    padding-bottom: 25px;
 }
 .Live-main p {
     color: #FFFFFF;
-    font-family: "Montserrat", Sans-serif;
+font-family: Arial , sans-serif;
     font-size: 26px;
     font-weight: 700;
     line-height: 1.1em;
 }
 .Live-main span {
-    color: #27F2B9;
+    color: #4af8d5;
 }
 .Live-main h4 {
     color: #FFFFFF;
-    font-family: "Montserrat", Sans-serif;
+font-family: Arial , sans-serif;
     font-size: 26px;
     font-weight: 700;
     line-height: 1.1em;
+    padding-top: 10px;
 }
 .input-group {
     max-width: 355px;
@@ -173,20 +188,24 @@ button.know-btn {
 
 /* Investing section start */
 #Investing-sec {
-    background-color: #F2F2F2;
+    /* background-color: #F2F2F2; */
     padding: 80px 0px 80px 0px;
 }
+.Invest-HT {
+    background-color: #F2F2F2;
+}
 #Investing-sec .section-head h2 {
-    color: #1A3073;
-    font-family: "Montserrat", Sans-serif;
+    color: #1F286F;
+    font-family: Arial , sans-serif;
     font-size: 40px;
     font-weight: 700;
 }
 #Investing-sec .learn-head h3 {
-    color: #1A3073;
+    color: #1F286F;
     font-size: 26px;
-    font-weight: 700;
+    font-weight: bold;
     padding-top: 40px;
+    font-family: 'Arial Bold', sans-serif;
 }
 #Investing-sec .Investing-grid {
     display: grid;
@@ -198,32 +217,29 @@ button.know-btn {
     padding: 50px 20px 50px 20px;
     border-radius: 10px;
 }
-#Investing-sec .Investing-1:nth-child(1) {
-    background-color: #0F71F2;
+.Investing-1 {
+    background-color: #3FD8DE !important;
 }
-#Investing-sec .Investing-1:nth-child(2) {
-    background-color: #0F71F2;
-}
-#Investing-sec .Investing-1:nth-child(3) {
-    background-color: #0F71F2;
-}
+
 #Investing-sec .invest-content h3 {
     color: #FFFFFF;
     font-size: 28px;
     font-weight: 700;
     line-height: 36px;
+    font-family: 'Arial Bold', sans-serif;
 }
 #Investing-sec  .invest-content p {
-    color: #FFFFFF;
-    font-family: "Open Sans", Sans-serif;
+    color: #FFFFFF;font-family: Arial , sans-serif;
     font-weight: 400;
     padding-bottom: 30px;
     padding-top: 30px;
+    font-size: 16px;
+    line-height: 24px;
 
 }
 #Investing-sec .Invest-btn button {
-    border: 1px solid #1A3073;
-    background: #1A3073;
+    border: 1px solid #019AFF;
+    background: #019AFF;
     font-size: 18px;
     line-height: 30px;
     border-radius: 27px;
@@ -241,10 +257,12 @@ button.know-btn {
     border-bottom:none;
     text-transform: uppercase;
 }
-
+.Investing-1:hover {
+    background: #2556FB !important;
+}
 .view-btn {
     text-align: center;
-    padding-top: 35px;
+    padding-top:25px;
 }
 button.view-btn{
     border: 2px solid #1A3073;
@@ -280,7 +298,7 @@ button.view-btn {
     grid-gap: 25px;
 }
 #blof-sec .learn-head h3 {
-    color: #1A3073;
+    color: #1F286F;
     font-size: 26px;
     font-weight: 700;
     padding-top: 40px;
@@ -291,6 +309,7 @@ button.view-btn {
     border-radius: 0px;
     padding-top: 24px;
     padding-bottom: 24px;
+    box-shadow: 0 0 10px 0 rgb(0 0 0 / 15%);
 }
 .blod-des {
     padding: 20px;
@@ -299,8 +318,8 @@ button.view-btn {
     width: 100%;
 }
 .blog-Ct h3 {
-    color: #000000;
-    font-family: "Montserrat", Sans-serif;
+    color: #1F286F;
+font-family: Arial , sans-serif;
     font-size: 20px;
     font-weight: 700;
 }
@@ -309,23 +328,76 @@ button.Blog-btn {
     background: none;
 }
 button.Blog-btn a {
-    color: #27F2B9;
+    color: #4af8d5;
     font-size: 12px;
     text-decoration: none;
     background: transparent;
+    padding-top: 15px;
 }
 
 /* top news css start */
 
 #Top-News {
     padding: 80px 0px 80px 0px;
+    max-width: 1100px;
+    margin: auto;
 }
-#Top-News  .top-title h3 {
-    color: #1A3073;
+#Top-News .top-title h3 {
+    color: #1f286f;
     font-size: 26px;
-    font-weight: 700;
-    padding-top: 0px;
-    padding-bottom: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: 'Arial Bold', sans-serif;
+    padding-bottom: 30px;
+    border-top: 2px solid #4af8d5;
+    position: relative;
+   
+}
+.top-title {
+    position: relative;
+    z-index: -2;
+}
+.titl-shape .top-title:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 3px;
+    height: 25px;
+    color: #4af8d5;
+    background-color: #4af8d5;
+    left: 0;
+}
+.top-sec {
+    padding-top: 15px;
+}
+.titl-shape .top-title:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 3px;
+    height: 25px;
+    color: #4af8d5;
+    background-color: #4af8d5;
+    right: 0;
+}
+/* .titl-shape .shape h3:before {
+    position: absolute;
+    left: 44%;
+    content: '';
+    background-color: #4af8d5;
+    width: 130px;
+    height: 40px;
+    border-radius: 5px;
+} */
+
+.shape h3 {
+    text-align: center;
+    margin-top: -45px;
+    margin-bottom: 40px;
+    background-color: #4af8d5;
+    max-width: 156px;
+    margin: -22px auto;
+    padding: 10px;
 }
 .Topnews-1 {
     display: grid;
@@ -341,9 +413,9 @@ button.Blog-btn a {
     line-height: 24px;
     font-weight: 700;
     font-style: normal;
-    font-family: 'Montserrat';
+font-family: 'Arial Bold', sans-serif;
     padding-top: 10px;
-    color: #000000;
+    color: #1F286F;
 }
 .Topnews-item p {
     font-size: 14px;
@@ -354,12 +426,13 @@ button.Blog-btn a {
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     margin-bottom: 5px;
+    font-family: Arial , sans-serif;
 }
 .Topnews-item h4 {
     font-size: 14px;
     line-height: 24px;
     font-style:normal;
-    color: #333333;
+    color: #C79F62;
     font-weight: 700;
 }
 h4.top-title {
@@ -369,6 +442,7 @@ h4.top-title {
     font-size: 14px;
     line-height: 24px;
     margin-bottom: 0px;
+    font-family: "Arial Narrow", Arial;
 }
 .topnew-2 {
     text-align: center;
@@ -381,15 +455,16 @@ h4.top-title {
 .topnew-2 h3 {
     font-size: 30px;
     line-height: 33px;
-    color: #000000;
+    color: #1F286F;
     font-weight: 600;
-    font-family: 'Montserrat';
+    font-family: 'Arial Bold', sans-serif;
 }
 .topnew-2 h4 {
     font-size: 16px;
     padding-top: 25px;
     line-height: 26px;
     font-weight: 400;
+    color: #C79F62;
 }
 .topnew-2 p {
     font-size: 14px;
@@ -405,8 +480,7 @@ h4.top-title {
 .sub-author{
     font-size: 14px;
     line-height: 24px;
-    font-style: italic;
-    color: #333333;
+    color: #C79F62;
     font-weight: 700;
 }
 .Topnews-item:nth-child(2) {
@@ -425,15 +499,15 @@ h4.top-title {
 .Topnew2-bt h3 {
     font-size: 20px;
     line-height: 24px;
-    color: #000000;
+    color: #1f286f;
     font-weight: 700;
-    font-family: 'Montserrat';
+font-family: 'Arial Bold', sans-serif;
 }
 .Topnew2-bt h4 {
     font-size: 14px;
     line-height: 24px;
     font-style: normal;
-    color: #333333;
+    color: #C79F62;
     font-weight: 700;
 }
 .Topnew2-bt p {
